[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Destroyer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://JetBrainsMono-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://CloudSpawn.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 256 )

[node name="Ground" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 352 )

[node name="Spawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 1040, 352 )

[node name="Destroyer" parent="." instance=ExtResource( 3 )]
position = Vector2( -48, 296 )

[node name="UI" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 600.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="UI"]
margin_left = 176.0
margin_top = 400.0
margin_right = 814.0
margin_bottom = 458.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "   Tap, Space, X, Arrow up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="UI/Box"]
margin_right = 638.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="UI/Box/Left"]
margin_right = 638.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = " Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Righ" type="VBoxContainer" parent="UI/Box"]
margin_left = 642.0
margin_right = 1026.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="HighScore" type="Label" parent="UI/Box/Righ"]
margin_right = 384.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HighScore: 0"

[node name="Center" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="UI/Center"]
visible = false
margin_left = 447.0
margin_top = 272.0
margin_right = 579.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 3 )
text = "Retry"

[node name="Play" type="Button" parent="UI/Center"]
margin_left = 459.0
margin_top = 272.0
margin_right = 567.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="CloudSpawn" parent="." instance=ExtResource( 7 )]
position = Vector2( 1066, 194 )

[node name="CloudSpawn2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1104, 128 )

[connection signal="pressed" from="UI/Center/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="UI/Center/Play" to="." method="_on_Play_pressed"]
